# backbone_models_cv_nlp

./: .gitignore  .gitmodules  README.md  breast_cancer_detection_on_rsna_images.ipynb  setup.py
src/: __init__.py
src/common/: kaggle_utils.py
src/cv/model_pipelines/: breast_cancer_detection_lightning_pipeline.py  breast_cancer_detection_on_rsna_images.ipynb  breast_cancer_detection_pipeline.py  dl_base_pipeline.py  dl_base_pytorch_lightning_pipeline.py  facial_keypoint_cnn_pipeline.py  facial_keypoint_resnet_pipeline.py  image_prompt_generation.py
src/cv/model_pipelines/notebooks/: facial_keypoint_recognition.ipynb  facial_keypoint_recognition_vanilla_cnn_kaggle_submission.ipynb  resnet_cnn_facial_keyp_detection.ipynb  semantic_segmentation_databases.ipynb
src/cv/model_pipelines/notebooks/.ipynb_checkpoints/: facial_keypoint_recognition-checkpoint.ipynb
src/cv/pytorch/: loss_functions.py
src/cv/pytorch/data_loader/: configs.py  dataloader.py  facial_keypoints.py
src/cv/pytorch/datasets/: base_dataset.py  configs.py
src/cv/pytorch/datasets/breast_cancer_detection/: dataset.py  (+2 more)
src/cv/pytorch/models/: architecture_customisation.py  architecture_cutomisation.py  configs.py  resnet.py  resnet_model_architectures.py  vanilla_cnn.py  vanillla_cnn.py
src/nlp/: preprocessing.py  pyproject.toml  setup.py
src/nlp/models/: evalutations.py  topic_model.py
src/nlp/nlp_experiments/: Very_simple_LDA_plus_BERT.ipynb  preprocessing.py  stopwords.py
src/nlp/nlp_experiments/models/: config.py  evalutations.py  topic_model.py
src/utils/: constants.py  cuda.py
(+26 files in other folders)
